<resources>
    <string name="app_name">A1_Harrison_Pape</string>
    <string name="submit">Submit</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="enter_pay_rate">Enter Pay Rate:</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="enter_number_of_hours_worked">Enter Number of Hours Worked:</string>
    <string name="payments">Payments</string>
</resources>